--- a/style.css
+++ b/style.css
@@ -71,6 +71,12 @@ body {
     max-width: 750px;
     top: 50%;
     transform: translateY(-50%);
+    /* background-color: aqua; */
+}
+
+#graph-circle-group {
+    max-width: 100%;
+
 }
 
 .mask {
