--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    justify-items: center;
 }
 
 .karl-div {
@@ -64,19 +64,25 @@ body {
     margin-left: 15%;
     /* background-color: blue; */
 }
-.draw-circle {
+.circle-bg {
     position: absolute;
-    /* height: 80%; */
-    width: 75%;
-    max-width: 750px;
-    top: 50%;
-    transform: translateY(-50%);
-    /* background-color: aqua; */
+    top: 0;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    max-width: 1000px;
+    /* background-color: aquamarine; */
+    justify-content: center;
+    align-items: center;
+
 }
 
-#graph-circle-group {
-    max-width: 100%;
-
+.circle-container {
+    display: flex;
+    height: 100%;
+    width: 75%;
+    justify-content: center;
+    /* background-color: rgb(206, 191, 191); */
 }
 
 .mask {
@@ -188,5 +194,5 @@ body {
 
 
 #mask-graph-circle {
-    animation-delay: 5s;
+    animation-delay: 1s;
 }
