--- a/style.css
+++ b/style.css
@@ -73,13 +73,13 @@ body {
     max-width: 1000px;
     /* background-color: aquamarine; */
     justify-content: center;
-    /* align-content: center; */
+    align-items: center;
 }
 
 .circle-container {
     display: flex;
     width: 75%;
-    min-height: 50%;
+    height: max-content;
     justify-content: center;
     /* background-color: rgb(206, 191, 191); */
 }
@@ -89,8 +89,7 @@ body {
     stroke: #fff;
     stroke-dasharray: 1500;
     stroke-dashoffset: 1500;
-    -webkit-animation: strokeOffset 0.35s linear forwards;
-            animation: strokeOffset 0.35s linear forwards;
+    animation: strokeOffset 0.35s linear forwards;
 }
 
 @keyframes strokeOffset {
