--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ body {
 
 .circle-container {
     display: block;
-    width: 100%;
+    width: 75%;
     /* justify-content: center; */
-    background-color: rgb(206, 191, 191);
+    /* background-color: rgb(206, 191, 191); */
 }
 
 .mask {
