--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     top: 0;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     max-width: 1000px;
     justify-content: center;
     align-items: center;
