--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     margin: 0 auto;
-    height: 100vh;
+    height: 100dvh;
     max-width: 1000px;
     text-align: center;
     /* background-color: blue; */
@@ -69,7 +69,7 @@ body {
     top: 0;
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     max-width: 1000px;
     justify-content: center;
     align-items: center;
