--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ body {
     top: 0;
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     max-width: 1000px;
     justify-content: center;
     align-items: center;
