--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     height: 100vh;
     max-width: 1000px;
     text-align: center;
-    background-color: blue;
+    /* background-color: blue; */
 }
 
 .main-wrapper {
     display: grid;
-    height: 100dvh;
+    height: 100vh;
     max-width: 1000px;
     grid-template-areas: 
     "t  t  t"
@@ -22,7 +22,7 @@ body {
     "b  b  b";
     grid-template-columns:20px auto 20px;
     grid-template-rows: 40px auto 40px;
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .top {grid-area: t;}
@@ -70,7 +70,7 @@ body {
     top: 0;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     max-width: 1000px;
     justify-content: center;
     align-items: center;
